[package]
name = "libchao"
version = "0.1.0"
authors = ["Luka Dornhecker <luka.dornhecker@gmail.com>"]
description = "A simple lisp implementation"
homepage = "https://github.com/lukad/chao"
license = "MIT"

[badges]
travis-ci = { repository = "lukad/chao", branch = "master" }

[dependencies]
itertools = "^0.8"
combine = "^3.2"
colored = "^1.6"
